--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
-Flask==2.2.3
-pandas==1.5.3
-numpy==1.23.5
-nltk==3.7
-scikit-learn==1.2.0
-joblib==1.2.0
-gunicorn==20.1.0
-flask==2.2.3
-
+Flask
+pandas
+numpy
+nltk
+scikit-learn
+joblib
+gunicorn
